bottom nav is added

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,15 +5,21 @@
             android:id="@+id/navigation_home"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_home"/>
-
     <item
-            android:id="@+id/navigation_dashboard"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_dashboard"/>
-
+            android:id="@+id/navigation_search"
+            android:icon="@drawable/ic_action_search"
+            android:title="Search"/>
+    <item
+            android:id="@+id/navigation_create_post"
+            android:icon="@drawable/ic_action_addpost"
+            android:title="Add Post"/>
     <item
             android:id="@+id/navigation_notifications"
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/title_notifications"/>
+            android:icon="@drawable/ic_action_likes"
+            android:title="Notifications"/>
+    <item
+            android:id="@+id/navigation_profile"
+            android:icon="@drawable/ic_dashboard_black_24dp"
+            android:title="Profile"/>
 
 </menu>
