--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,17 +4,30 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" tools:ignore="MissingDefaultResource">
-
+    <ImageView
+            android:layout_width="99dp"
+            android:layout_height="90dp" tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/profile_image"
+            android:scaleType="centerCrop" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
     <TextView
-            android:id="@+id/text_home"
-            android:layout_width="match_parent"
+            android:text="Username"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/profile_username" android:layout_marginStart="36dp"
+            app:layout_constraintStart_toEndOf="@+id/profile_image" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="36dp" android:textSize="18sp" android:textColor="#F70C0B0B"/>
+    <TextView
+            android:text="Full Name "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" tools:layout_editor_absoluteY="74dp"
+            android:id="@+id/profile_fullname" android:layout_marginStart="36dp"
+            app:layout_constraintStart_toEndOf="@+id/profile_image"/>
+    <Button
+            android:text="Edit Profile"
+            android:layout_width="321dp"
+            android:layout_height="43dp"
+            android:id="@+id/btn_edit_profile" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/profile_image"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
