--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -38,18 +38,6 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:backgroundTint="@android:color/transparent"
-                android:hint="Username"
-                android:inputType="text"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white" android:id="@+id/username_Register"
-                android:layout_marginBottom="10dp"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:backgroundTint="@android:color/transparent"
                 android:hint="Name"
                 android:inputType="text"
                 android:padding="15dp"
@@ -84,17 +72,25 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="30dp"
                 android:background="#B1B1B1" />
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
-                android:backgroundTint="@android:color/transparent"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white" android:id="@+id/password_register"/>
+                app:passwordToggleEnabled="true"
+                android:layout_height="wrap_content">
+
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:padding="15dp"
+                    android:textColor="@android:color/white"
+
+                    android:textColorHint="@android:color/white" android:id="@+id/password_register"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <RelativeLayout
                 android:layout_width="match_parent"
