--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,33 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" tools:ignore="MissingDefaultResource">
-    <ImageView
-            android:layout_width="99dp"
-            android:layout_height="90dp" tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/profile_image"
-            android:scaleType="centerCrop" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
-    <TextView
-            android:text="Username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/profile_username" android:layout_marginStart="36dp"
-            app:layout_constraintStart_toEndOf="@+id/profile_image" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="36dp" android:textSize="18sp" android:textColor="#F70C0B0B"/>
-    <TextView
-            android:text="Full Name "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="74dp"
-            android:id="@+id/profile_fullname" android:layout_marginStart="36dp"
-            app:layout_constraintStart_toEndOf="@+id/profile_image"/>
-    <Button
-            android:text="Edit Profile"
-            android:layout_width="321dp"
-            android:layout_height="43dp"
-            android:id="@+id/btn_edit_profile" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/profile_image"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:background="@color/colorPrimaryDark"
+                android:layout_height="180dp">
+
+            <Button
+                    android:text="Log Out"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/logOut"/>
+        </RelativeLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginTop="100dp"
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:id="@+id/profile_pic"
+                    android:layout_marginStart="20dp"
+                    android:padding="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/profilepic"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp">
+            </ImageView>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:layout_width="match_parent"
+                        android:text="Name"
+                        android:layout_height="wrap_content" android:textColor="#FFFDFD" android:id="@+id/profile_name">
+                </TextView>
+                <TextView
+                        android:layout_width="match_parent"
+                        android:text="Email"
+                        android:layout_height="wrap_content" android:textColor="#F8F7F7"
+                        android:id="@+id/profile_email">
+                </TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+</ScrollView>
