--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,57 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" tools:ignore="MissingDefaultResource">
-    <RelativeLayout
+    <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
         <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="@color/colorPrimaryDark"
-                android:layout_height="180dp">
+                android:layout_height="wrap_content">
 
-            <Button
-                    android:text="Log Out"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/logOut"/>
-        </RelativeLayout>
+            <RelativeLayout
+                    android:layout_width="match_parent"
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginTop="100dp"
-                android:orientation="horizontal">
+                    android:layout_height="180dp">
+                <ImageView
+                        android:layout_width="match_parent"
+                        android:id="@+id/profile_coverImg"
+                        android:src="@drawable/ic_edit"
+                        android:layout_height="match_parent">
+                </ImageView>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+                    <Button
+                            android:text="Log Out"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/logOut"/>
+                </LinearLayout>
 
-            <ImageView
-                    android:id="@+id/profile_pic"
-                    android:layout_marginStart="20dp"
-                    android:padding="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:src="@drawable/profilepic"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp">
-            </ImageView>
+
+            </RelativeLayout>
+
             <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
-                <TextView
+                    android:layout_height="120dp"
+                    android:layout_marginTop="80dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:id="@+id/profile_pic"
+                        android:layout_marginStart="20dp"
+                        android:padding="5dp"
+                        android:layout_marginLeft="20dp"
+                        android:src="@drawable/profilepic"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp">
+                </ImageView>
+                <LinearLayout
+                        android:background="#000"
                         android:layout_width="match_parent"
-                        android:text="Name"
-                        android:layout_height="wrap_content" android:textColor="#FFFDFD" android:id="@+id/profile_name">
-                </TextView>
-                <TextView
-                        android:layout_width="match_parent"
-                        android:text="Email"
-                        android:layout_height="wrap_content" android:textColor="#F8F7F7"
-                        android:id="@+id/profile_email">
-                </TextView>
+                        android:orientation="vertical"
+                        android:paddingLeft="10dp"
+                        android:layout_height="wrap_content">
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:text="Name"
+                            android:layout_height="wrap_content"
+                            android:textColor="#FFFDFD" android:id="@+id/profile_name" android:textSize="26sp">
+                    </TextView>
+
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:text="Email"
+                            android:layout_height="wrap_content"
+                            android:textColor="#F8F7F7"
+                            android:id="@+id/profile_email" android:textSize="14sp">
+                    </TextView>
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:text="Bio"
+                            android:textColor="#F8F7F7"
+                            android:id="@+id/profile_bio"
+                            android:layout_height="wrap_content" android:textSize="18sp">
+                    </TextView>
+                </LinearLayout>
+
             </LinearLayout>
 
-        </LinearLayout>
-
-    </RelativeLayout>
-</ScrollView>
+        </RelativeLayout>
+    </ScrollView>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_edit"
+            android:layout_height="wrap_content" android:id="@+id/fab_profile_edit"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="70dp">
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
+</RelativeLayout>
