UserList Is Successfully show

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,7 +31,7 @@
         </androidx.appcompat.widget.Toolbar>
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="523dp"
                 android:id="@+id/recycler_view_search"
 
                 tools:ignore="NotSibling">
