--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:orientation="vertical"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
-    <ImageView
-            android:layout_width="67dp"
-            android:layout_height="66dp" android:src="@mipmap/ic_launcher"
-            android:id="@+id/searchlist_userImg"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
-    <TextView
-            android:text="Username"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        app:cardElevation="1dp"
+        app:cardCornerRadius="2dp"
+        app:contentPadding="3dp"
+        android:layout_height="wrap_content"
+>
+    <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/userlist_Username" android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintStart_toEndOf="@+id/searchlist_userImg" android:layout_marginStart="23dp"/>
-    <TextView
-            android:text="Full Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/userlist_FullName"
-            android:layout_marginStart="23dp"
-            app:layout_constraintStart_toEndOf="@+id/searchlist_userImg" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/userlist_Username"/>
-    <Button
-            android:text="Button"
-            android:layout_width="82dp"
-            android:layout_height="34dp"
-            android:id="@+id/button_follow" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
+            android:orientation="horizontal"
+            android:layout_height="wrap_content" tools:ignore="MissingConstraints">
+        <ImageView
+                android:layout_width="70dp"
+                android:src="@drawable/ic_person"
+                android:layout_height="70dp" android:id="@+id/user_list_profileImg">
+        </ImageView>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="3dp"
+                android:paddingTop="3dp"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:text="Person Name"
+                    android:textColor="@color/black"
+                    android:layout_height="wrap_content" android:textSize="18sp" android:id="@+id/user_list_name">
+            </TextView>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:text="Email "
+                    android:textColor="@color/black"
+                    android:layout_height="wrap_content" android:id="@+id/user_list_email">
+            </TextView>
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
