Search User Is Successfully added

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,31 +9,12 @@
             android:layout_height="match_parent"
             android:id="@+id/bar"
             android:background="?android:attr/windowBackground">
-        <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/toolbar"
-                android:background="?android:attr/windowBackground">
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/search_image"
-                    android:src="@drawable/ic_action_search">
-            </ImageView>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/search_bar"
-                    android:layout_marginLeft="20dp"
-                    android:hint="  Search ..."
-                    android:background="@android:color/transparent">
-            </EditText>
-        </androidx.appcompat.widget.Toolbar>
         <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="523dp"
-                android:id="@+id/recycler_view_search"
 
+                android:layout_marginBottom="70dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recycler_view_search"
                 tools:ignore="NotSibling">
         </androidx.recyclerview.widget.RecyclerView>
     </com.google.android.material.appbar.AppBarLayout>
