--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,9 +19,9 @@
 
     <fragment
             android:id="@+id/navigation_notifications"
-            android:name="com.example.loginul.ui.notifications.NotificationsFragment"
+            android:name="com.example.loginul.ui.notifications.ChatFragment"
             android:label="@string/title_notifications"
-            tools:layout="@layout/fragment_notifications"/>
+            tools:layout="@layout/fragment_chat"/>
     <fragment
             android:id="@+id/navigation_create_post"
             android:name="com.example.loginul.ui.createPost.CreatePostFragment"
