--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,7 +21,6 @@
                 android:layout_height="35dp">
         </ImageView>
         <LinearLayout
-
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_width="match_parent"
@@ -53,6 +52,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:id="@+id/chat_layout"
             android:layout_alignParentBottom="true"
@@ -71,7 +71,9 @@
         <ImageButton
                 android:layout_width="40dp"
                 android:src="@drawable/ic_send"
-                android:layout_height="40dp" android:background="#FDF8F7F7" android:id="@+id/chat_send_imgButton">
+                android:layout_height="40dp"
+                android:background="#FDF8F7F7"
+                android:id="@+id/chat_send_imgButton">
         </ImageButton>
     </LinearLayout>
 
