i was trying to add online status and last in ChatActivity so it is not working well

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -34,7 +34,7 @@
             </TextView>
             <TextView
                     android:layout_width="match_parent"
-                    android:text=" online "
+                    android:text="  "
                     android:layout_height="wrap_content" android:textSize="14sp" android:textColor="#FAF8F8"
                     android:id="@+id/chat_status">
             </TextView>
