--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:padding="10dp"
               android:layout_height="wrap_content">
 
     <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-        <ImageView
-                android:layout_width="50dp"
-                android:src="@drawable/icon"
-                android:id="@+id/profile_img_chat_row"
-                android:layout_height="50dp">
-        </ImageView>
 
         <TextView
                 android:id="@+id/message_chat_row"
                 android:layout_width="wrap_content"
                 android:textSize="16sp"
+                android:layout_marginEnd="50dp"
                 android:padding="15dp"
                 android:textColor="@color/black"
                 android:text="Her message"
