--- a/app/src/main/res/layout/row_chat_right.xml
+++ b/app/src/main/res/layout/row_chat_right.xml
@@ -1,61 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:paddingLeft="10dp"
-              android:paddingTop="10dp"
-              android:paddingBottom="10dp"
-              android:layout_height="wrap_content">
-
-    <LinearLayout
-            android:orientation="horizontal"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <ImageView
-                android:layout_width="50dp"
-                android:src="@drawable/icon"
-                android:id="@+id/profile_img_chat_row"
-                android:layout_height="50dp"
-                android:visibility="gone">
-        </ImageView>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:orientation="vertical"
+                                                   android:layout_width="match_parent"
+                                                   android:paddingLeft="10dp"
+                                                   android:paddingTop="10dp"
+                                                   android:paddingBottom="10dp"
+                                                   android:layout_height="wrap_content">
 
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:layout_marginStart="120dp"
-                android:paddingStart="5dp"
+    <ImageView
+            android:layout_width="50dp"
+            android:src="@drawable/icon"
+            android:id="@+id/profile_img_chat_row"
+            android:layout_height="50dp"
+            android:visibility="gone">
+    </ImageView>
 
-                android:id="@+id/time_chat_row"
-                android:text="12/32/2020 05:12"
-
-                android:layout_height="wrap_content">
-        </TextView>
-        <TextView
-                android:id="@+id/message_chat_row"
-                android:layout_width="wrap_content"
-                android:textSize="16sp"
-                android:padding="15dp"
-                android:textColor="@color/black"
-                android:text="  Her message     "
-                android:background="@drawable/bg_sender"
-                android:layout_height="wrap_content">
-        </TextView>
-
-
-
-    </LinearLayout>
 
     <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:textColor="@color/black"
+
+            android:id="@+id/time_chat_row"
+            android:text="12/32/2020 05:12"
+
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/message_chat_row">
+    </TextView>
+    <TextView
+            android:id="@+id/message_chat_row"
+            android:layout_width="wrap_content"
+            android:textSize="16sp"
+            android:padding="15dp"
+            android:layout_marginStart="60dp"
+            android:textColor="@color/black"
+            android:text="  Her message     "
+            android:background="@drawable/bg_sender"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent">
+    </TextView>
+    <TextView
+            android:layout_width="360dp"
             android:id="@+id/chat_row_seen"
             android:gravity="end"
             android:textAlignment="textEnd"
             android:text="delivered"
-            android:layout_height="wrap_content">
+            android:layout_height="21dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.392"
+            app:layout_constraintTop_toBottomOf="@+id/time_chat_row">
     </TextView>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
